fixed header moving content, changed spacing at project section and aligned about icons in responsive view

--- a/style/content.css
+++ b/style/content.css
@@ -95,8 +95,8 @@ h2 {
     font-weight: 700;
     line-height: 120%;
     color: var(--text-orange);
-    margin-top: 36px;
-    margin-bottom: 32px;
+    margin-top: 70px;
+    margin-bottom: 52px;
 }
 
 .feedback-card {
