--- a/style/responsive.css
+++ b/style/responsive.css
@@ -31,6 +31,18 @@
     .about-details {
         width: 100%;
     }
+
+    #location {
+        margin-right: 26px;
+    }
+
+    #relocate {
+        margin-right: 44px;
+    }
+
+    #remote {
+        margin-right: 12px;
+    }
 }
 
 @media (max-width: 1100px) {
@@ -164,6 +176,20 @@
         grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     }
 
+}
+
+@media (max-width: 450px) {
+    #location {
+        margin-right: 0px;
+    }
+
+    #relocate {
+        margin-right: 0px;
+    }
+
+    #remote {
+        margin-right: 0px;
+    }
 }
 
 @media (max-width: 400px) {
